get rid of /v2 and just remove old SkipClient
